fix some bugs and adding ControllerTest